Website: improve statistics docs, add statistics chapter to Programming Guide, improve PG images based on print version
[ ] May break build
[ ] Breaks existing applications
[ ] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[x] Documentation

--- a/Presentations/Flyer.graffle/data.plist
+++ b/Presentations/Flyer.graffle/data.plist
@@ -168,7 +168,7 @@
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2008-04-05 16:40:59 +0200</string>
+	<string>2008-04-28 18:48:59 +0200</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
@@ -1078,10 +1078,10 @@ name "bottom"}</string>
 							<key>OrthogonalBarAutomatic</key>
 							<true/>
 							<key>OrthogonalBarPosition</key>
-							<real>3.6154937744140625</real>
+							<real>3.6154975891113281</real>
 							<key>Points</key>
 							<array>
-								<string>{506.694, 70.8655}</string>
+								<string>{506.693, 70.8655}</string>
 								<string>{488.747, 91.0965}</string>
 							</array>
 							<key>Style</key>
@@ -1128,7 +1128,7 @@ name "bottom"}</string>
 							<real>-1</real>
 							<key>Points</key>
 							<array>
-								<string>{450.001, 71.1162}</string>
+								<string>{450, 70.8662}</string>
 								<string>{439.37, 85.0389}</string>
 								<string>{432.283, 148.818}</string>
 							</array>
@@ -2065,8 +2065,8 @@ name "front"}</string>
 							<real>0.0</real>
 							<key>Points</key>
 							<array>
-								<string>{478.347, 42.5191}</string>
-								<string>{450.001, 56.693}</string>
+								<string>{478.346, 42.5191}</string>
+								<string>{450, 56.693}</string>
 							</array>
 							<key>Style</key>
 							<dict>
@@ -2117,8 +2117,8 @@ name "front"}</string>
 							<real>0.0</real>
 							<key>Points</key>
 							<array>
-								<string>{478.347, 42.5191}</string>
-								<string>{506.694, 56.6923}</string>
+								<string>{478.346, 42.5191}</string>
+								<string>{506.693, 56.6923}</string>
 							</array>
 							<key>Style</key>
 							<dict>
@@ -2166,10 +2166,10 @@ name "front"}</string>
 							<key>OrthogonalBarAutomatic</key>
 							<true/>
 							<key>OrthogonalBarPosition</key>
-							<real>11.216690063476562</real>
+							<real>11.091400146484375</real>
 							<key>Points</key>
 							<array>
-								<string>{411.024, 28.346}</string>
+								<string>{411.274, 28.346}</string>
 								<string>{446.457, 35.4325}</string>
 							</array>
 							<key>Style</key>
@@ -2216,11 +2216,11 @@ name "front"}</string>
 							<key>OrthogonalBarAutomatic</key>
 							<true/>
 							<key>OrthogonalBarPosition</key>
-							<real>7.673126220703125</real>
+							<real>7.673187255859375</real>
 							<key>Points</key>
 							<array>
 								<string>{375.591, 28.346}</string>
-								<string>{347.244, 31.8892}</string>
+								<string>{347.245, 31.8892}</string>
 							</array>
 							<key>Style</key>
 							<dict>
@@ -2271,7 +2271,7 @@ name "front"}</string>
 							<real>-1</real>
 							<key>Points</key>
 							<array>
-								<string>{333.071, 63.7791}</string>
+								<string>{333.071, 64.029}</string>
 								<string>{333.071, 77.9515}</string>
 							</array>
 							<key>Style</key>
@@ -2531,7 +2531,7 @@ name "front"}</string>
 							<real>-1</real>
 							<key>Points</key>
 							<array>
-								<string>{333.071, 49.6058}</string>
+								<string>{333.071, 49.6057}</string>
 								<string>{333.071, 56.6926}</string>
 							</array>
 							<key>Style</key>
@@ -2634,7 +2634,7 @@ name "front"}</string>
 							<key>Points</key>
 							<array>
 								<string>{357.874, 113.385}</string>
-								<string>{347.244, 60.2358}</string>
+								<string>{347.245, 60.2358}</string>
 							</array>
 							<key>Style</key>
 							<dict>
@@ -5778,7 +5778,7 @@ output frame}</string>
 							<key>Points</key>
 							<array>
 								<string>{134.646, 205.511}</string>
-								<string>{212.599, 212.597}</string>
+								<string>{212.598, 212.597}</string>
 							</array>
 							<key>Style</key>
 							<dict>
@@ -5827,7 +5827,7 @@ output frame}</string>
 							<key>Points</key>
 							<array>
 								<string>{134.646, 205.511}</string>
-								<string>{134.646, 212.597}</string>
+								<string>{134.645, 212.597}</string>
 							</array>
 							<key>Style</key>
 							<dict>
@@ -5876,7 +5876,7 @@ output frame}</string>
 							<key>Points</key>
 							<array>
 								<string>{134.645, 205.511}</string>
-								<string>{56.6929, 212.597}</string>
+								<string>{56.6928, 212.597}</string>
 							</array>
 							<key>Style</key>
 							<dict>
@@ -5970,7 +5970,7 @@ output frame}</string>
 							<real>-1</real>
 							<key>Points</key>
 							<array>
-								<string>{134.646, 276.377}</string>
+								<string>{134.645, 276.376}</string>
 								<string>{134.646, 290.551}</string>
 							</array>
 							<key>Style</key>
@@ -6026,7 +6026,7 @@ output frame}</string>
 							<real>0.587249755859375</real>
 							<key>Points</key>
 							<array>
-								<string>{56.6929, 276.377}</string>
+								<string>{56.6928, 276.376}</string>
 								<string>{134.645, 290.551}</string>
 							</array>
 							<key>Style</key>
@@ -6084,7 +6084,7 @@ output frame}</string>
 							<real>0.587249755859375</real>
 							<key>Points</key>
 							<array>
-								<string>{212.599, 276.377}</string>
+								<string>{212.598, 276.376}</string>
 								<string>{134.645, 290.551}</string>
 							</array>
 							<key>Style</key>
@@ -6461,7 +6461,7 @@ Contributors
 \deftab720
 \pard\pardeftab720\sa320\qj
 
-\f0\fs20 \cf0 Equalizer is an open source project providing a minimally invasive programming interface and resource management system for parallel, scalable OpenGL\'ae applications. It allows an application to run unmodified on any visualization system, from a simple workstation to large scale graphics clusters and multi-GPU workstations. Consulting and support is available from Eyescale Software GmbH.}</string>
+\f0\fs20 \cf0 Equalizer is an open source project providing a minimally invasive programming interface and resource management system for parallel, scalable OpenGL\'ae applications. It allows an application to run unmodified on any visualization system, from a simple workstation to large scale graphics clusters and multi-GPU workstations. Consulting and support are available from Eyescale Software GmbH.}</string>
 					</dict>
 				</dict>
 				<dict>
@@ -9481,7 +9481,7 @@ Feature-Rich Framework:
 		<key>FitInWindow</key>
 		<true/>
 		<key>Frame</key>
-		<string>{{420, 114}, {915, 746}}</string>
+		<string>{{161, 134}, {915, 746}}</string>
 		<key>VisibleRegion</key>
 		<string>{{0, -7.99997}, {838, 603.36}}</string>
 		<key>Zoom</key>
