--- a/Developer/ProgrammingGuide/images/b2f_perspective.graffle/data.plist
+++ b/Developer/ProgrammingGuide/images/b2f_perspective.graffle/data.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>ActiveLayerIndex</key>
@@ -7,7 +7,7 @@
 	<key>ApplicationVersion</key>
 	<array>
 		<string>com.omnigroup.OmniGrafflePro</string>
-		<string>129.15</string>
+		<string>129.18</string>
 	</array>
 	<key>AutoAdjust</key>
 	<true/>
@@ -59,8 +59,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -102,8 +100,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -145,8 +141,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -393,8 +387,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -436,8 +428,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -479,8 +469,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -522,8 +510,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -565,8 +551,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -608,8 +592,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -651,8 +633,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -701,8 +681,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -748,8 +726,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -802,8 +778,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -849,8 +823,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -896,8 +868,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -959,8 +929,8 @@
 			<key>Text</key>
 			<dict>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949\cocoasubrtf270
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -1008,8 +978,8 @@
 			<key>Text</key>
 			<dict>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949\cocoasubrtf270
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -1057,8 +1027,8 @@
 			<key>Text</key>
 			<dict>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949\cocoasubrtf270
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -1106,8 +1076,8 @@
 			<key>Text</key>
 			<dict>
 				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;}
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949\cocoasubrtf270
+{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
@@ -1130,7 +1100,7 @@
 			<array>
 				<string>{613.323, 212.598}</string>
 				<string>{633.908, 193.565}</string>
-				<string>{660.526, 189.868}</string>
+				<string>{660.526, 189.867}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1147,8 +1117,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -1188,7 +1156,7 @@
 			<integer>50</integer>
 			<key>Points</key>
 			<array>
-				<string>{496.69, 212.599}</string>
+				<string>{496.689, 212.599}</string>
 				<string>{514.124, 196.481}</string>
 				<string>{538.08, 189.814}</string>
 			</array>
@@ -1207,8 +1175,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -1250,7 +1216,7 @@
 			<array>
 				<string>{381.028, 212.598}</string>
 				<string>{395.878, 198.425}</string>
-				<string>{414.96, 192.914}</string>
+				<string>{414.961, 192.914}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1267,8 +1233,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -1310,7 +1274,7 @@
 			<array>
 				<string>{272.17, 212.598}</string>
 				<string>{279.241, 199.946}</string>
-				<string>{293.401, 191.416}</string>
+				<string>{293.402, 191.416}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1327,8 +1291,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -1370,7 +1332,7 @@
 			<array>
 				<string>{154.564, 212.598}</string>
 				<string>{158.821, 198.425}</string>
-				<string>{170.208, 189.192}</string>
+				<string>{170.208, 189.191}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1387,8 +1349,6 @@
 						<key>r</key>
 						<string>1</string>
 					</dict>
-					<key>Draws</key>
-					<string>YES</string>
 					<key>Fuzziness</key>
 					<real>0.99215424060821533</real>
 					<key>ShadowVector</key>
@@ -1425,6 +1385,14 @@
 			<integer>4</integer>
 			<key>Shape</key>
 			<string>Rectangle</string>
+			<key>Style</key>
+			<dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
 		</dict>
 		<dict>
 			<key>Bounds</key>
@@ -1437,6 +1405,14 @@
 			<integer>1</integer>
 			<key>Shape</key>
 			<string>Rectangle</string>
+			<key>Style</key>
+			<dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
 		</dict>
 		<dict>
 			<key>Bounds</key>
@@ -1449,6 +1425,14 @@
 			<integer>2</integer>
 			<key>Shape</key>
 			<string>Rectangle</string>
+			<key>Style</key>
+			<dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
 		</dict>
 		<dict>
 			<key>Bounds</key>
@@ -1461,6 +1445,14 @@
 			<integer>3</integer>
 			<key>Shape</key>
 			<string>Rectangle</string>
+			<key>Style</key>
+			<dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
 		</dict>
 	</array>
 	<key>GridInfo</key>
@@ -1594,7 +1586,7 @@
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2007-10-07 16:55:51 +0200</string>
+	<string>2008-05-02 17:48:33 +0200</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
@@ -1611,13 +1603,13 @@
 	<dict>
 		<key>NSBottomMargin</key>
 		<array>
-			<string>float</string>
-			<string>0</string>
+			<string>coded</string>
+			<string>BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU051bWJlcgCEhAdOU1ZhbHVlAISECE5TT2JqZWN0AIWEASqEhAFklwCG</string>
 		</array>
 		<key>NSLeftMargin</key>
 		<array>
-			<string>float</string>
-			<string>0</string>
+			<string>coded</string>
+			<string>BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU051bWJlcgCEhAdOU1ZhbHVlAISECE5TT2JqZWN0AIWEASqEhAFklwCG</string>
 		</array>
 		<key>NSOrientation</key>
 		<array>
@@ -1631,13 +1623,13 @@
 		</array>
 		<key>NSRightMargin</key>
 		<array>
-			<string>float</string>
-			<string>0</string>
+			<string>coded</string>
+			<string>BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU051bWJlcgCEhAdOU1ZhbHVlAISECE5TT2JqZWN0AIWEASqEhAFklwCG</string>
 		</array>
 		<key>NSTopMargin</key>
 		<array>
-			<string>float</string>
-			<string>0</string>
+			<string>coded</string>
+			<string>BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU051bWJlcgCEhAdOU1ZhbHVlAISECE5TT2JqZWN0AIWEASqEhAFklwCG</string>
 		</array>
 	</dict>
 	<key>ReadOnly</key>
